--- a/gas_flux_R/gas_flux_key.Rmd
+++ b/gas_flux_R/gas_flux_key.Rmd
@@ -362,7 +362,7 @@ gradient <- (200-atmo[[1]])
 flux = mean_k*(gradient)
 
 # convert to kg/hour*m2
-flux*(3600/1)*(1/1000000)*(0.5)*(0.001) # sec to hour, mg to kg, height of chamber, liter to cubic 
+flux*(3600/1)*(1/1e6)*(0.5)*(1/1e3) # sec to hour, mg to kg, height of chamber, liter to cubic 
 ```
 
 ### Part B
